--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+isdnutils (1:3.6.2005-01-03-5) unstable; urgency=medium
+
+  * Merge Ubuntu diffs:
+    - Add udev support (#297539).
+    - Use lsb_functions for messages from init.d scripts.
+    - mISDN module support in capiutils init.d script.
+
+ -- Matthias Klose <doko@debian.org>  Tue, 29 Mar 2005 00:56:38 +0200
+
 isdnutils (1:3.6.2005-01-03-4ubuntu1) hoary; urgency=low
 
   * Sync with Debian package.
@@ -11,7 +20,7 @@ isdnutils (1:3.6.2005-01-03-4ubuntu1) hoary; urgency=low
     Closes: #240853.
   * Quote ISP login name in secrets and ipppd config files. Closes: #274161.
 
- -- Matthias Klose <doko@debian.org>  Mon, 28 Mar 2005 19:21:27 +0200
+ -- Matthias Klose <doko@ubuntu.com>  Mon, 28 Mar 2005 19:21:27 +0200
 
 isdnutils (1:3.6.2005-01-03-4) unstable; urgency=medium
 
