--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+isdnutils (1:3.7.2005-07-09-1.1) unstable; urgency=low
+
+  * Non-maintainer upload
+  * Complete transition from libcapi20-2 to libcapi20-3 (closes: #318808)
+
+ -- Lionel Elie Mamane <lmamane@debian.org>  Fri, 22 Jul 2005 17:38:29 +0200
+
 isdnutils (1:3.7.2005-07-09-1) unstable; urgency=low
 
   * New upstream version.
