--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,30 @@
+isdnutils (1:3.7.2005-07-09-2ubuntu4) breezy; urgency=low
+
+  * Create more isdn devices files on top of udev. Ubuntu #3156.
+
+ -- Matthias Klose <doko@ubuntu.com>  Thu, 22 Sep 2005 09:38:06 +0200
+
+isdnutils (1:3.7.2005-07-09-2ubuntu3) breezy; urgency=low
+
+  * Add new drivers to /etc/isdn/capi.conf (commented out).
+
+ -- Matthias Klose <doko@ubuntu.com>  Wed,  7 Sep 2005 12:14:17 +0200
+
+isdnutils (1:3.7.2005-07-09-2ubuntu2) breezy; urgency=low
+
+  * Don't link again libXp.
+
+ -- Matthias Klose <doko@ubuntu.com>  Mon, 15 Aug 2005 09:17:52 +0000
+
+isdnutils (1:3.7.2005-07-09-2ubuntu1) breezy; urgency=low
+
+  * Remove build dependency on xutils (xmkmf/imake), still broken in breezy.
+    Ubuntu 13117.
+  * Drop l-k-h build dependency, adjust version requirements for
+    xlibs-dev and xutils.
+
+ -- Matthias Klose <doko@ubuntu.com>  Mon, 15 Aug 2005 09:13:26 +0200
+
 isdnutils (1:3.7.2005-07-09-2) unstable; urgency=low
 
   * Fix typo in debian/rules (closes: #318808).
