--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+isdnutils (1:3.8.2005-12-06-1) unstable; urgency=low
+
+  * Upload to unstable.
+
+ -- Matthias Klose <doko@debian.org>  Mon, 19 Dec 2005 01:12:49 +0100
+
 isdnutils (1:3.8.2005-12-06-0ubuntu1) dapper; urgency=low
 
   * New upstream version.
