--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+isdnutils (1:3.8.2005-12-06-2) unstable; urgency=low
+
+  * Build-depend on xmkmf.
+
+ -- Matthias Klose <doko@debian.org>  Mon,  2 Jan 2006 00:55:08 +0100
+
 isdnutils (1:3.8.2005-12-06-1) unstable; urgency=low
 
   * Upload to unstable.
