--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+isdnutils (1:3.8.2005-12-06-2ubuntu2) dapper; urgency=low
+
+  * capi20: Regenerate Makefile.in.
+
+ -- Matthias Klose <doko@ubuntu.com>  Mon,  9 Jan 2006 16:34:22 +0000
+
 isdnutils (1:3.8.2005-12-06-2ubuntu1) dapper; urgency=low
 
   * Build depend on imake instead of xmkmf.
