--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+isdnutils (1:3.8.2005-12-06-4) unstable; urgency=low
+
+  * capi20: Regenerate Makefile.in. Closes: #318808.
+  * Fix error updating isdnvboxserver. Closes: #346079.
+
+ -- Matthias Klose <doko@debian.org>  Mon,  9 Jan 2006 16:34:22 +0000
+
 isdnutils (1:3.8.2005-12-06-3) unstable; urgency=low
 
   * Build-depend on imake as first alternative.
