--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+isdnutils (1:3.8.2005-12-06-2ubuntu3) dapper; urgency=low
+
+  * Update blacklist to modprobe format, drop discover data files.
+
+ -- Scott James Remnant <scott@ubuntu.com>  Thu, 20 Apr 2006 12:19:22 +0100
+
 isdnutils (1:3.8.2005-12-06-2ubuntu2) dapper; urgency=low
 
   * capi20: Regenerate Makefile.in.
