--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+isdnutils (1:3.8.2005-12-06-2ubuntu4) dapper; urgency=low
+
+  * debian/capiutils.postinst:
+    - don't fail if /etc/hotplug/blacklist.d can't be removed
+      (broke upgrades)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 26 Apr 2006 09:30:56 +0200
+
 isdnutils (1:3.8.2005-12-06-2ubuntu3) dapper; urgency=low
 
   * Update blacklist to modprobe format, drop discover data files.
