--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+isdnutils (1:3.8.2005-12-06-4.1) unstable; urgency=high
+
+  * Non-maintainer upload.
+  * Install files to /usr/bin instead of /usr/X11R6/bin. Closes: #363938.
+  * Urgency set to high due to RC Bug fix.
+
+ -- Pierre Habouzit <madcoder@debian.org>  Thu, 25 May 2006 23:35:07 +0200
+
 isdnutils (1:3.8.2005-12-06-4) unstable; urgency=low
 
   * capi20: Regenerate Makefile.in. Closes: #318808.
