--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+isdnutils (1:3.8.2005-12-06-4.1ubuntu1) edgy; urgency=low
+
+  * Merge from debian unstable.
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  4 Jul 2006 10:33:02 +0200
+
 isdnutils (1:3.8.2005-12-06-4.1) unstable; urgency=high
 
   * Non-maintainer upload.
@@ -18,6 +24,26 @@ isdnutils (1:3.8.2005-12-06-3) unstable; urgency=low
   * Build-depend on imake as first alternative.
 
  -- Matthias Klose <doko@debian.org>  Fri,  6 Jan 2006 00:15:44 +0000
+
+isdnutils (1:3.8.2005-12-06-2ubuntu4) dapper; urgency=low
+
+  * debian/capiutils.postinst:
+    - don't fail if /etc/hotplug/blacklist.d can't be removed
+      (broke upgrades)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 26 Apr 2006 09:30:56 +0200
+
+isdnutils (1:3.8.2005-12-06-2ubuntu3) dapper; urgency=low
+
+  * Update blacklist to modprobe format, drop discover data files.
+
+ -- Scott James Remnant <scott@ubuntu.com>  Thu, 20 Apr 2006 12:19:22 +0100
+
+isdnutils (1:3.8.2005-12-06-2ubuntu2) dapper; urgency=low
+
+  * capi20: Regenerate Makefile.in.
+
+ -- Matthias Klose <doko@ubuntu.com>  Mon,  9 Jan 2006 16:34:22 +0000
 
 isdnutils (1:3.8.2005-12-06-2ubuntu1) dapper; urgency=low
 
