--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+isdnutils (1:3.9.20060704-2) unstable; urgency=low
+
+  * Build for s390.
+
+ -- Matthias Klose <doko@debian.org>  Sun, 16 Jul 2006 22:39:44 +0000
+
 isdnutils (1:3.9.20060704-1) unstable; urgency=low
 
   * New upstream version.
