--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+isdnutils (1:3.9.20060704-2.2ubuntu1) feisty; urgency=low
+
+  * Add dependency on update-inetd to isdnvboxserver.
+
+ -- Tollef Fog Heen <tfheen@ubuntu.com>  Thu, 14 Dec 2006 11:32:30 +0100
+
 isdnutils (1:3.9.20060704-2.2) unstable; urgency=high
 
   * Non-maintainer upload.
