--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
-isdnutils (1:3.9.20060704-2.2ubuntu1) feisty; urgency=low
+isdnutils (1:3.9.20060704-2.3) unstable; urgency=low
 
-  * Add dependency on update-inetd to isdnvboxserver.
+  * Non-maintainer upload to fix longstanding debconf and l10n issues
+  * Run debconf-udpatepo in the clean target to guarantee up-to-date
+    PO and POT files in debian/po
+  * Debconf templates translations
+   - French completed
+   - German updated. Closes: #405365
+   - Italian added. Closes: #379468
+   - French updated
+   - Czech added. Closes: #391542
 
- -- Tollef Fog Heen <tfheen@ubuntu.com>  Thu, 14 Dec 2006 11:32:30 +0100
+ -- Christian Perrier <bubulle@debian.org>  Thu, 18 Jan 2007 22:47:52 +0100
 
 isdnutils (1:3.9.20060704-2.2) unstable; urgency=high
 
